WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
222691
REGRESSION (
r273732
): ASSERTION FAILED: Completion handler should always be called under WebKit::RemoteRealtimeMediaSourceProxy::~RemoteRealtimeMediaSourceProxy
https://bugs.webkit.org/show_bug.cgi?id=222691
Summary
REGRESSION (r273732): ASSERTION FAILED: Completion handler should always be c...
Truitt Savell
Reported
2021-03-03 14:48:12 PST
fast/mediastream/mediastreamtrack-video-frameRate-decreasing.html History:
https://results.webkit.org/?suite=layout-tests&test=fast%2Fmediastream%2Fmediastreamtrack-video-frameRate-decreasing.html
Crash: 0 com.apple.JavaScriptCore 0x000000027cb2058e WTFCrash + 14 (Assertions.cpp:295) 1 com.apple.WebKit 0x0000000249f6a6f7 WTF::CompletionHandler<void (WTF::Optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)>::~CompletionHandler() + 87 (CompletionHandler.h:58) 2 com.apple.WebKit 0x0000000249f542d5 WTF::CompletionHandler<void (WTF::Optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)>::~CompletionHandler() + 21 (CompletionHandler.h:57) 3 com.apple.WebKit 0x0000000249f6111f WTF::VectorDestructor<true, WTF::CompletionHandler<void (WTF::Optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)> >::destruct(WTF::CompletionHandler<void (WTF::Optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)>*, WTF::CompletionHandler<void (WTF::Optional<WebCore::RealtimeMediaSource::ApplyConstraintsError>&&)>*) + 47 (Vector.h:67)
Attachments
crash log
(141.20 KB, text/plain)
2021-03-03 23:15 PST
,
Ryan Haddad
no flags
Details
Patch
(4.43 KB, patch)
2021-03-04 02:38 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Truitt Savell
Comment 1
2021-03-03 15:19:51 PST
I am unable to reproduce this locally. this test started crashing around
r273732
which seems related.
Radar WebKit Bug Importer
Comment 2
2021-03-03 15:20:10 PST
<
rdar://problem/75006211
>
Ryan Haddad
Comment 3
2021-03-03 20:48:11 PST
ASSERTION FAILED: Completion handler should always be called !m_function /Volumes/Data/worker/ios-simulator-14-debug/build/WebKitBuild/Debug-iphonesimulator/usr/local/include/wtf/CompletionHandler.h(58) : WTF::CompletionHandler<void (WTF::Optional<WebCore::RealtimeMediaSource::ApplyConstraintsError> &&)>::~CompletionHandler()
Ryan Haddad
Comment 4
2021-03-03 23:15:33 PST
Created
attachment 422184
[details]
crash log
Ryan Haddad
Comment 5
2021-03-03 23:15:48 PST
Looks like we're seeing this assert with various media stream tests: fast/mediastream/audio-bad-sampleRate.html fast/mediastream/resize-trim.html fast/mediastream/play-newly-added-audio-track.html fast/mediastream/audio-settings-reset.html
Ryan Haddad
Comment 6
2021-03-03 23:16:04 PST
***
Bug 222690
has been marked as a duplicate of this bug. ***
youenn fablet
Comment 7
2021-03-04 02:38:00 PST
Created
attachment 422209
[details]
Patch
EWS
Comment 8
2021-03-04 09:49:01 PST
Committed
r273892
: <
https://commits.webkit.org/r273892
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 422209
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug